@@ -27,7 +27,7 @@ Location: {printer_location}<BR>
 Class State: {printer_state=3?idle:{printer_state=4?processing:stopped}},
 {printer_is_accepting_jobs=0?rejecting jobs:accepting jobs}, {printer_is_shared=0?not:} published.
 {?printer_state_message=?:<BR><I>"{printer_state_message}"</I>}
-{?member_names=?:<BR>Members: {member_names}}
+{?member_uris=?:<BR>Members: {member_uris}}
 <P>
 <A HREF="{printer_uri_supported}?op=print-test-page">
 <IMG SRC="/images/print-test-page.gif" ALT="Print Test Page" BORDER="0"></A>
