@@ -3,6 +3,8 @@ CHANGES.txt - 09/30/2005
 
 CHANGES IN CUPS V1.2.0b1
 
+	- The classes web page now provides links to each of the
+	  member printers (STR #307)
 	- CUPS now handles HTTP request/response lines up to 32k
 	  in length; this is mainly for better cookie support
 	  (STR #1274)
